k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: cloudpulse
  namespace: cloudpulse

spec:
  replicas: 2

  selector:
    matchLabels:
      app: cloudpulse

  strategy:
    type: RollingUpdate

  template:

    metadata:

      labels:
        app: cloudpulse

      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8000"

    spec:
      terminationGracePeriodSeconds: 30

      containers:

      - name: cloudpulse

        image: tanmay322/cloudpulse:latest

        imagePullPolicy: Always

        ports:
        - containerPort: 8000

        resources:

          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "500m"
            memory: "512Mi"

        readinessProbe:

          httpGet:
            path: /ready
            port: 8000

          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 3

        livenessProbe:

          httpGet:
            path: /health
            port: 8000

          initialDelaySeconds: 15
          periodSeconds: 20
          timeoutSeconds: 2

        lifecycle:
          preStop:
            exec:
              command:
                - sh
                - -c
                - sleep 10
