k8s/prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: prometheus
  namespace: cloudpulse

spec:
  replicas: 1

  selector:
    matchLabels:
      app: prometheus

  template:

    metadata:

      labels:
        app: prometheus

    spec:

      containers:

      - name: prometheus

        image: prom/prometheus:latest

        ports:
        - containerPort: 9090

        volumeMounts:

        - name: prometheus-config

          mountPath: /etc/prometheus

      volumes:

      - name: prometheus-config

        configMap:

          name: prometheus-config
