k8s/grafana-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: grafana-service
  namespace: cloudpulse

spec:

  selector:
    app: grafana

  ports:

  - port: 3000
    targetPort: 3000

  type: ClusterIP
