k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: cloudpulse-ingress
  namespace: cloudpulse

spec:

  ingressClassName: nginx

  rules:

  - host: cloudpulse.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: cloudpulse-service

            port:

              number: 80
